# plotrs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  justfile
.github/workflows/: build_linux.yml  build_windows.yml
examples/scatter/: README.md  scatter.csv  scatter.ron
examples/scatter_best_fit/: README.md  cos.ron  cubic.ron  exponential.ron  gaussian.ron  linear.ron  polynomial.ron  quadratic.ron  scatter.csv  sin.ron
examples/scatter_error_bars/: README.md  scatter_xy.csv  scatter_xy.ron  scatter_y.csv  scatter_y.ron
examples/scatter_full/: README.md  scatter.csv  scatter.ron
examples/scatter_large/: README.md  scatter.csv  scatter.ron
examples/scatter_multidata_one_csv/: README.md  scatter.csv  scatter.ron
examples/scatter_multidata_two_csv/: README.md  scatter.ron  scatter1.csv  scatter2.csv
examples/scatter_quadrants/: README.md  all_quadrants.csv  all_quadrants.ron  bottom_left.csv  bottom_left.ron  bottom_pair.csv  bottom_pair.ron  bottom_right.csv  bottom_right.ron  left_pair.csv  left_pair.ron  right_pair.csv  right_pair.ron  top_left.csv  top_left.ron  top_pair.csv  top_pair.ron  top_right.ron
src/: canvas.rs  colours.rs  data.rs  main.rs  scatter.rs
src/canvas/: axes.rs  best_fit.rs  glyphs.rs  legend.rs  mod.rs  plot.rs  quadrants.rs  title.rs
src/canvas/axes/: axis_x.rs  axis_y.rs  mod.rs
src/scatter/: data.rs  mod.rs
