[package]
name = "plotit"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
description = "CLI app for plotting data points and writing a png to disk"
readme = "README.md"
homepage = "https://github.com/BlondeBurrito/plotit"
repository = "https://github.com/BlondeBurrito/plotit"
license = "MIT OR Apache-2.0"
keywords = ["utility"]
catagories = ["config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1", features = ["derive"]}
image = {version = "0.24", default-features = false, features = ["png"]}
imageproc = "0.23"
font-kit = "0.11"
rusttype = "0.9"
serde = {version = "1", features = ["derive"]}
ron = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"