[package]
name = "plotrs"
version = "0.1.3"
edition = "2021"
rust-version = "1.60"
description = "CLI app for plotting data points from a csv and writing a png to disk"
readme = "README.md"
homepage = "https://github.com/BlondeBurrito/plotrs"
repository = "https://github.com/BlondeBurrito/plotrs"
license = "MIT OR Apache-2.0"
keywords = ["cli", "plot", "plotting", "graph", "data"]
categories = ["command-line-utilities", "multimedia::images", "mathematics", "science", "visualization"]
exclude = [
    ".github/**",
    "justfile",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1", features = ["derive"]}
clap-verbosity-flag = "1.0.0"
image = {version = "0.24", default-features = false, features = ["png"]}
font-kit = "0.11"
rusttype = "0.9"
serde = {version = "1", features = ["derive"]}
ron = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
regex = "1"
csv = "1"